Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13513

osp_precreate_reserve() should not take d->opd_pre_status == -EIO as fatal

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      When OST_CREATE (not resendable rpc) sent by precreate thread fails
      with network error, osp_pre_update_status() sets d->opd_pre_status to
      EIO. osp_precreate_reserve() considers EIO as fatal and does not wait
      for another attempt from precreate thread. That may make
      mdt_intent_open to return ENOSPC confusing a caller.
      ENOSPC comes from lod_alloc_rr().

            vsaveliev Vladimir Saveliev
            vsaveliev Vladimir Saveliev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: