lustre/include/obd_support.h
@@ -453,6 +453,7 @@ extern char obd_jobid_var[];
 #define OBD_FAIL_PTLRPC_RESEND_RACE	 0x525
 #define OBD_FAIL_PTLRPC_ROUND_XID	 0x530
 #define OBD_FAIL_PTLRPC_CONNECT_RACE	 0x531
+#define OBD_FAIL_NET_ERROR_RPC		 0x532
 
 #define OBD_FAIL_OBD_PING_NET            0x600
 /*	OBD_FAIL_OBD_LOG_CANCEL_NET      0x601 obsolete since 1.5 */
@@ -703,6 +704,7 @@ extern char obd_jobid_var[];
 #define OBD_FAIL_OSP_CANT_PROCESS_LLOG		0x2105
 #define OBD_FAIL_OSP_INVALID_LOGID		0x2106
 #define OBD_FAIL_OSP_CON_EVENT_DELAY		0x2107
+#define OBD_FAIL_OSP_PRECREATE_PAUSE		0x2108
 
 /* barrier */
 #define OBD_FAIL_MGS_BARRIER_READ_NET		0x2200
